--- a/app/src/main/res/layout/comment_list_element.xml
+++ b/app/src/main/res/layout/comment_list_element.xml
@@ -9,10 +9,30 @@
     app:contentPadding="10dp"
     app:elevation="5dp">
 
-    <TextView
-        android:id="@+id/comment"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="id" />
+
+        <TextView
+            android:id="@+id/author"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/author" />
+
+        <TextView
+            android:id="@+id/comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Text" />
+
+    </LinearLayout>
 
     <!--TODO Dodać autora i id-->
 
